--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -10,13 +10,13 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Masoodzon: Best place To Buy Books</title>
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link rel="stylesheet" href="{% static 'https://use.fontawesome.com/releases/v5.11.2/css/all.css' %}">
   <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   <!-- Material Design Bootstrap -->
-  <link href="css/mdb.min.css" rel="stylesheet">
+  <link href= "{% static 'css/mdb.min.css' %}" rel="stylesheet">
   <!-- Your custom styles (optional) -->
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="{% static 'css/style.min.css' %}" rel="stylesheet">
   <style type="text/css">
     html,
     body,
@@ -55,8 +55,8 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-        <strong class="blue-text">MDB</strong>
+      <a class="navbar-brand waves-effect" href= "{%static 'https://mdbootstrap.com/docs/jquery/' %}" target="_blank">
+        <strong class="blue-text">Masoodzon</strong>
       </a>
 
       <!-- Collapse -->
@@ -71,19 +71,19 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link waves-effect" href="#">Home
+            <a class="nav-link waves-effect" href= "{%static '#' %}">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">About MDB</a>
+            <a class="nav-link waves-effect" href="{%static 'https://mdbootstrap.com/docs/jquery/' %}" target="_blank">About MDB</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link waves-effect" href="https://mdbootstrap.com/docs/jquery/getting-started/download/"
+            <a class="nav-link waves-effect" href="{%static 'https://mdbootstrap.com/docs/jquery/getting-started/download/%'}"
               target="_blank">Free download</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link waves-effect" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Free
+            <a class="nav-link waves-effect" href="{%static 'https://mdbootstrap.com/education/bootstrap/'%}"target="_blank">Free
               tutorials</a>
           </li>
         </ul>
@@ -108,9 +108,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="nav-link border border-light rounded waves-effect"
+            <a href="https://github.com/Hmasood97" class="nav-link border border-light rounded waves-effect"
               target="_blank">
-              <i class="fab fa-github mr-2"></i>MDB GitHub
+              <i class="fab fa-github mr-2"></i>Hisham's GitHub
             </a>
           </li>
         </ul>
@@ -145,11 +145,11 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong>Learn Bootstrap 4 with MDB</strong>
+                <strong> Get The Best Book Prices Here! </strong>
               </h1>
 
               <p>
-                <strong>Best & free guide of responsive web design</strong>
+                <strong>An online store that beats Amazon's Prices!</strong>
               </p>
 
               <p class="mb-4 d-none d-md-block">
@@ -158,10 +158,7 @@
                   available. Create your own, stunning website.</strong>
               </p>
 
-              <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start
-                free tutorial
-                <i class="fas fa-graduation-cap ml-2"></i>
-              </a>
+             
             </div>
             <!-- Content -->
 
