--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -332,7 +332,7 @@
                   J.K Rowling
                 </h6>
                 <h4 class="font-weight-bold blue-text">
-                  <strong>$30</strong>
+                  <strong>${{price}}</strong>
                 </h4>
 
               </div>
