creating first three book objects

--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -323,7 +323,7 @@
                 </a>
                 <h5>
                   <strong>
-                    <a href="" class="dark-grey-text">Harry Potter and the Prisoner of Azkaban
+                    <a href="" class="dark-grey-text"> {{harry_Potter.title}}
                       <span class="badge badge-pill danger-color">NEW</span>
                     </a>
                   </strong>
@@ -332,7 +332,7 @@
                   J.K Rowling
                 </h6>
                 <h4 class="font-weight-bold blue-text">
-                  <strong>${{price}}</strong>
+                  <strong>$25</strong>
                 </h4>
 
               </div>
