--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -307,7 +307,7 @@
 
               <!--Card image-->
               <div class="view overlay">
-                <img src="https://wordery.com/jackets/0c0562f3/harry-potter-and-the-prisoner-of-azkaban-j-k-rowling-9781408855676.jpg" class="card-img-top"
+                <img src="{{harry_Potter.image}}" class="card-img-top"
                   alt="">
                 <a>
                   <div class="mask rgba-white-slight"></div>
