--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -300,6 +300,7 @@
         <div class="row wow fadeIn">
 
           <!--Grid column-->
+          {% for book in books %}
           <div class="col-lg-3 col-md-6 mb-4">
 
             <!--Card-->
@@ -307,7 +308,7 @@
 
               <!--Card image-->
               <div class="view overlay">
-                <img src="{{harry_Potter.image}}" class="card-img-top"
+                <img src={{book.image}} class="card-img-top"
                   alt="">
                 <a>
                   <div class="mask rgba-white-slight"></div>
@@ -319,20 +320,19 @@
               <div class="card-body text-center">
                 <!--Category & Title-->
                 <a href="" class="grey-text">
-                  <h5>Fantasy</h5>
+                  <h5>{{book.genre}}</h5>
                 </a>
                 <h5>
                   <strong>
-                    <a href="" class="dark-grey-text"> {{harry_Potter.title}}
-                      <span class="badge badge-pill danger-color">NEW</span>
+                    <a href="" class="dark-grey-text"> {{book.title}}
                     </a>
                   </strong>
                 </h5>
                 <h6>
-                  J.K Rowling
+                  {{book.author}}
                 </h6>
                 <h4 class="font-weight-bold blue-text">
-                  <strong>$25</strong>
+                  <strong>{{book.price}}</strong>
                 </h4>
 
               </div>
@@ -342,326 +342,14 @@
             <!--Card-->
 
           </div>
+          {% endfor %}
           <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/81VStYnDGrL.jpg" class="card-img-top"
-                  alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Biography</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text">Steve Jobs</a>
-                  </strong>
-                </h5>
-                <h6>
-                    Walter Isaacson
-                  </h6>
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$40</strong>
-                </h4>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/91cI7fKu0vL.jpg" class="card-img-top"
-                  alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Sci-fi</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text">Hyperion
-                      <span class="badge badge-pill primary-color">bestseller</span>
-                    </a>
-                  </strong>
-                </h5>
-                <h6>
-                  Dan Simmons
-                </h6>
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$15</strong>
-                </h4>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Grid column-->
-
-          <!--Fourth column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="" class="card-img-top"
-                  alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Horror</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text">The Haunting of Hill House</a>
-                  </strong>
-                </h5>
-                <h6>
-                 Shirley Jackson
-                </h6>
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$20</strong>
-                </h4>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Fourth column-->
-
-        </div>
-        <!--Grid row-->
-
-        <!--Grid row-->
-        <div class="row wow fadeIn">
-
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="https://cdn.shopify.com/s/files/1/0438/2233/products/Peacock_Cover_glitter_card_5_x_7.jpg?v=1571638712" class="card-img-top"
-                  alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Romance</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text"> Pride and Prejudice
-                      <span class="badge badge-pill danger-color">NEW</span>
-                    </a>
-                  </strong>
-                </h5>
-                <h6>
-                  Jane Austen
-                 </h6>
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$25</strong>
-                </h4>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/71OFqSRFDgL.jpg" class="card-img-top"
-                  alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Sci-Fi</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text">Fahrenheit 451</a>
-                  </strong>
-                </h5>
-                <h6>
-                  Ray Bradbury
-                 </h6>
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$35</strong>
-                </h4>
-                
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/717KRq4xxxL.jpg" class="card-img-top"
-                  alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Biography</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text">When Breath Becomes Air
-                      <span class="badge badge-pill primary-color">bestseller</span>
-                    </a>
-                  </strong>
-                </h5>
-                <h6>
-                  Paul Kalanithi
-                 </h6>
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$15</strong>
-                </h4>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Grid column-->
-
-          <!--Fourth column-->
-          <div class="col-lg-3 col-md-6 mb-4">
-
-            <!--Card-->
-            <div class="card">
-
-              <!--Card image-->
-              <div class="view overlay">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/51tW-UJVfHL._SX321_BO1,204,203,200_.jpg" class="card-img-top"
-                  alt="">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
-              <!--Card image-->
-
-              <!--Card content-->
-              <div class="card-body text-center">
-                <!--Category & Title-->
-                <a href="" class="grey-text">
-                  <h5>Fantasy</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="" class="dark-grey-text">The Lord of the Rings</a>
-                  </strong>
-                </h5>
-                <h6>
-                  J.R.R Tolkein
-                 </h6>
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$15</strong>
-                </h4>
-
-              </div>
-              <!--Card content-->
-
-            </div>
-            <!--Card-->
-
-          </div>
-          <!--Fourth column-->
-
         </div>
         <!--Grid row-->
 
       </section>
       <!--Section: Products v.3-->
+  
 
       <!--Pagination-->
       <nav class="d-flex justify-content-center wow fadeIn">
