--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -1,10 +1,6 @@
-{% load static %}
+{% load staticfiles %}
 
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<Main>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -55,7 +51,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand waves-effect" href= "{%static 'https://mdbootstrap.com/docs/jquery/' %}" target="_blank">
+      <a class="navbar-brand waves-effect" href='https://mdbootstrap.com/docs/jquery/' target="_blank">
         <strong class="blue-text">Masoodzon</strong>
       </a>
 
@@ -76,7 +72,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link waves-effect" href= 'https://mdbootstrap.com/docs/jquery/' target="_blank">About MasoodZon</a>
+            <a class="nav-link waves-effect" href='checkout.html' target="_blank">Checkout</a>
           </li>
         </ul>
 
@@ -90,12 +86,12 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="{%static 'https://www.facebook.com/mdbootstrap'%}" class="nav-link waves-effect" target="_blank">
+            <a href= "https://www.facebook.com/mdbootstrap" class="nav-link waves-effect" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a href= "{%static 'https://twitter.com/MDBootstrap'%}" class="nav-link waves-effect" target="_blank">
+            <a href= "{% static 'https://twitter.com/MDBootstrap' %}" class="nav-link waves-effect" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
@@ -224,11 +220,11 @@
     <!--/.Slides-->
 
     <!--Controls-->
-    <a class="carousel-control-prev" href="{%static '#carousel-example-1z'%}" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="{% static '#carousel-example-1z' %}" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="{%static '#carousel-example-1z'%}" role="button" data-slide="next">
+    <a class="carousel-control-next" href="{% static '#carousel-example-1z' %}" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -259,24 +255,24 @@
           <!-- Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{%static '#' %}" >All
+              <a class="nav-link" href="{ % static '#' % }" >All
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%static '#' %}" >Fantasy</a>
+              <a class="nav-link" href="{% static '#' %}" >Fantasy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%static '#' %}" >Biographies</a>
+              <a class="nav-link" href="{% static '#' %}" >Biographies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%static '#' %}" >Sci-fi</a>
+              <a class="nav-link" href="{% static '#' %}" >Sci-fi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%static '#' %}" >Horror</a>
+              <a class="nav-link" href="{% static '#' %}" >Horror</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{%static '#' %}" >Romance</a>
+              <a class="nav-link" href="{% static '#' %}"  >Romance</a>
             </li>
 
           </ul>
@@ -400,11 +396,11 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href= "{%static 'https://mdbootstrap.com/docs/jquery/getting-started/download/' %}" target="_blank"
+      <a class="btn btn-outline-white" href= "{% static 'https://mdbootstrap.com/docs/jquery/getting-started/download/' %}" target="_blank"
         role="button">Download MDB
         <i class="fas fa-download ml-2"></i>
       </a>
-      <a class="btn btn-outline-white" href="{%static 'https://mdbootstrap.com/education/bootstrap/'" target="_blank" role="button">Start
+      <a class="btn btn-outline-white" href= "{% static 'https://mdbootstrap.com/education/bootstrap/' %}" target="_blank" role="button">Start
         free tutorial
         <i class="fas fa-graduation-cap ml-2"></i>
       </a>
@@ -415,11 +411,11 @@
 
     <!-- Social icons -->
     <div class="pb-4">
-      <a href="{% static 'https://www.facebook.com/mdbootstrap' %}" target="_blank">
+      <a href="https://www.facebook.com/mdbootstrap" target="_blank">
         <i class="fab fa-facebook-f mr-3"></i>
       </a>
 
-      <a href= "{%static 'https://twitter.com/MDBootstrap' %}" target="_blank">
+      <a href= "https://twitter.com/MDBootstrap" target="_blank">
         <i class="fab fa-twitter mr-3"></i>
       </a>
 
@@ -436,7 +432,7 @@
     <!--Copyright-->
     <div class="footer-copyright py-3">
       © 2019 Copyright:
-      <a href="{%static 'https://mdbootstrap.com/education/bootstrap/' %}" target="_blank"> MDBootstrap.com </a>
+      <a href="{% static 'https://mdbootstrap.com/education/bootstrap/' %}" target="_blank"> MDBootstrap.com </a>
     </div>
     <!--/.Copyright-->
 
@@ -445,13 +441,13 @@
 
   <!-- SCRIPTS -->
   <!-- JQuery -->
-  <script type="text/javascript" src="{%static 'js/jquery-3.4.1.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
   <!-- Bootstrap tooltips -->
-  <script type="text/javascript" src="{%static 'js/popper.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="{%static 'js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
   <!-- MDB core JavaScript -->
-  <script type="text/javascript" src="{%static 'js/mdb.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
   <!-- Initializations -->
   <script type="text/javascript">
     // Animations initialization
@@ -460,4 +456,5 @@
   </script>
 </body>
 
-</html>
+</main>
+
